--- a/index.html
+++ b/index.html
@@ -12,239 +12,240 @@
         <h2>Паспорт собственника</h2>
         <label for="pasport-sobstvennika-surname-name">Фамилия</label>
         <input type="text" name="pasport-sobstvennika-surname-name" id="pasport-sobstvennika-surname-name"
-               placeholder="Фамилия" required="">
+               placeholder="Фамилия">
 
         <label for="pasport-sobstvennika-first-name">Имя</label>
         <input type="text" name="pasport-sobstvennika-first-name" id="pasport-sobstvennika-first-name" placeholder="Имя"
-               required="">
+        >
 
         <label for="pasport-sobstvennika-last-name">Отчество</label>
         <input type="text" name="pasport-sobstvennika-last-name" id="pasport-sobstvennika-last-name"
-               placeholder="Отчество" required="">
+               placeholder="Отчество">
 
         <label for="pasport-sobstvennika-birthday">Дата рождения</label>
         <input type="date" name="pasport-sobstvennika-birthday" id="pasport-sobstvennika-birthday"
-               placeholder="Дата рождения" required="">
+               placeholder="Дата рождения">
 
         <label for="pasport-sobstvennika-birthday-place">Место рождения</label>
         <input type="text" name="pasport-sobstvennika-birthday-place" id="pasport-sobstvennika-birthday-place"
-               placeholder="Место рождения" required="">
+               placeholder="Место рождения">
 
         <label for="pasport-sobstvennika-passport-seria">Серия паспорта</label>
         <input type="number" name="pasport-sobstvennika-passport-seria" id="pasport-sobstvennika-passport-seria"
-               placeholder="Серия паспорта" required="">
+               placeholder="Серия паспорта">
 
         <label for="pasport-sobstvennika-passport-number">Номер паспорта</label>
         <input type="number" name="pasport-sobstvennika-passport-number" id="pasport-sobstvennika-passport-number"
-               placeholder="Номер паспорта" required="">
+               placeholder="Номер паспорта">
 
         <label for="pasport-sobstvennika-kem-vydan">Кем выдан</label>
         <input type="text" name="pasport-sobstvennika-kem-vydan" id="pasport-sobstvennika-kem-vydan"
-               placeholder="Кем выдан" required="">
+               placeholder="Кем выдан">
 
         <label for="pasport-sobstvennika-data-vydachi-passporta">Дата выдачи паспорта</label>
         <input type="date" name="pasport-sobstvennika-data-vydachi-passporta"
-               id="pasport-sobstvennika-data-vydachi-passporta" placeholder="Дата выдачи паспорта" required="">
+               id="pasport-sobstvennika-data-vydachi-passporta" placeholder="Дата выдачи паспорта">
 
         <label for="pasport-sobstvennika-code-podrazdeleniya">Код подразделения</label>
         <input type="number" name="pasport-sobstvennika-code-podrazdeleniya"
-               id="pasport-sobstvennika-code-podrazdeleniya" placeholder="Код подразделения" required="">
+               id="pasport-sobstvennika-code-podrazdeleniya" placeholder="Код подразделения">
 
         <label for="pasport-sobstvennika-semeinoe-polozhjenie">Семейное положение</label>
         <input type="text" name="pasport-sobstvennika-semeinoe-polozhjenie"
-               id="pasport-sobstvennika-semeinoe-polozhjenie" placeholder="Семейное положение" required="">
+               id="pasport-sobstvennika-semeinoe-polozhjenie" placeholder="Семейное положение">
 
         <label for="pasport-sobstvennika-mesto-propiski-kak-v-pasporte">Место прописки как в паспорте</label>
         <input type="text" name="pasport-sobstvennika-mesto-propiski-kak-v-pasporte"
                id="pasport-sobstvennika-mesto-propiski-kak-v-pasporte" placeholder="Место прописки как в паспорте"
-               required="">
+        >
 
         <label for="pasport-sobstvennika-fakticheskoe-mesto-zhitelstva">Фактическое место жительства</label>
         <input type="text" name="pasport-sobstvennika-fakticheskoe-mesto-zhitelstva"
                id="pasport-sobstvennika-fakticheskoe-mesto-zhitelstva" placeholder="Фактическое место жительства"
-               required="">
+        >
 
         <h2>Паспорт страхователя</h2>
 
-        <label for="pasport-strahovatelya-sovpadaet-s-pasportom-sobstvennika">Совпадает с паспортом собственника (если совпадает - заполнять не надо)</label>
+        <label for="pasport-strahovatelya-sovpadaet-s-pasportom-sobstvennika">Совпадает с паспортом собственника (если
+            совпадает - заполнять не надо)</label>
         <input type="checkbox" name="pasport-strahovatelya-sovpadaet-s-pasportom-sobstvennika"
                id="pasport-strahovatelya-sovpadaet-s-pasportom-sobstvennika"
-               placeholder="Совпадает с паспортом собственника" required="">
+               placeholder="Совпадает с паспортом собственника">
 
         <label for="pasport-strahovatelya-surname-name">Фамилия</label>
         <input type="text" name="pasport-strahovatelya-surname-name" id="pasport-strahovatelya-surname-name"
-               placeholder="Фамилия" required="">
+               placeholder="Фамилия">
 
         <label for="pasport-strahovatelya-first-name">Имя</label>
         <input type="text" name="pasport-strahovatelya-first-name" id="pasport-strahovatelya-first-name"
-               placeholder="Имя" required="">
+               placeholder="Имя">
 
         <label for="pasport-strahovatelya-last-name">Отчество</label>
         <input type="text" name="pasport-strahovatelya-last-name" id="pasport-strahovatelya-last-name"
-               placeholder="Отчество" required="">
+               placeholder="Отчество">
 
         <label for="pasport-strahovatelya-birthday">Дата рождения</label>
         <input type="date" name="pasport-strahovatelya-birthday" id="pasport-strahovatelya-birthday"
-               placeholder="Дата рождения" required="">
+               placeholder="Дата рождения">
 
         <label for="pasport-strahovatelya-birthday-place">Место рождения</label>
         <input type="text" name="pasport-strahovatelya-birthday-place" id="pasport-strahovatelya-birthday-place"
-               placeholder="Место рождения" required="">
+               placeholder="Место рождения">
 
         <label for="pasport-strahovatelya-passport-seria">Серия паспорта</label>
         <input type="number" name="pasport-strahovatelya-passport-seria" id="pasport-strahovatelya-passport-seria"
-               placeholder="Серия паспорта" required="">
+               placeholder="Серия паспорта">
 
         <label for="pasport-strahovatelya-passport-number">Номер паспорта</label>
         <input type="number" name="pasport-strahovatelya-passport-number" id="pasport-strahovatelya-passport-number"
-               placeholder="Номер паспорта" required="">
+               placeholder="Номер паспорта">
 
         <label for="pasport-strahovatelya-kem-vydan">Кем выдан</label>
         <input type="text" name="pasport-strahovatelya-kem-vydan" id="pasport-strahovatelya-kem-vydan"
-               placeholder="Кем выдан" required="">
+               placeholder="Кем выдан">
 
         <label for="pasport-strahovatelya-data-vydachi-passporta">Дата выдачи паспорта</label>
         <input type="date" name="pasport-strahovatelya-data-vydachi-passporta"
-               id="pasport-strahovatelya-data-vydachi-passporta" placeholder="Дата выдачи паспорта" required="">
+               id="pasport-strahovatelya-data-vydachi-passporta" placeholder="Дата выдачи паспорта">
 
         <label for="pasport-strahovatelya-code-podrazdeleniya">Код подразделения</label>
         <input type="number" name="pasport-strahovatelya-code-podrazdeleniya"
-               id="pasport-strahovatelya-code-podrazdeleniya" placeholder="Код подразделения" required="">
+               id="pasport-strahovatelya-code-podrazdeleniya" placeholder="Код подразделения">
 
         <label for="pasport-strahovatelya-semeinoe-polozhjenie">Семейное положение</label>
         <input type="text" name="pasport-strahovatelya-semeinoe-polozhjenie"
-               id="pasport-strahovatelya-semeinoe-polozhjenie" placeholder="Семейное положение" required="">
+               id="pasport-strahovatelya-semeinoe-polozhjenie" placeholder="Семейное положение">
 
         <label for="pasport-strahovatelya-mesto-propiski-kak-v-pasporte">Место прописки как в паспорте</label>
         <input type="text" name="pasport-strahovatelya-mesto-propiski-kak-v-pasporte"
                id="pasport-strahovatelya-mesto-propiski-kak-v-pasporte" placeholder="Место прописки как в паспорте"
-               required="">
+        >
 
         <label for="pasport-strahovatelya-fakticheskoe-mesto-zhitelstva">Фактическое место жительства</label>
         <input type="text" name="pasport-strahovatelya-fakticheskoe-mesto-zhitelstva"
                id="pasport-strahovatelya-fakticheskoe-mesto-zhitelstva" placeholder="Фактическое место жительства"
-               required="">
+        >
         <h2>Водительское удостоверение лица допущенного к управлению</h2>
         <label for="voditelskoe-udostoverenie-surname-name">Фамилия</label>
         <input type="text" name="voditelskoe-udostoverenie-surname-name" id="voditelskoe-udostoverenie-surname-name"
-               placeholder="Фамилия" required="">
+               placeholder="Фамилия">
 
         <label for="voditelskoe-udostoverenie-first-name">Имя</label>
         <input type="text" name="voditelskoe-udostoverenie-first-name" id="voditelskoe-udostoverenie-first-name"
                placeholder="Имя"
-               required="">
+        >
 
         <label for="voditelskoe-udostoverenie-last-name">Отчество</label>
         <input type="text" name="voditelskoe-udostoverenie-last-name" id="voditelskoe-udostoverenie-last-name"
-               placeholder="Отчество" required="">
+               placeholder="Отчество">
 
         <label for="voditelskoe-udostoverenie-birthday">Дата рождения</label>
         <input type="date" name="voditelskoe-udostoverenie-birthday" id="voditelskoe-udostoverenie-birthday"
-               placeholder="Дата рождения" required="">
+               placeholder="Дата рождения">
 
         <label for="voditelskoe-udostoverenie-birthday-place">Место рождения</label>
         <input type="text" name="voditelskoe-udostoverenie-birthday-place" id="voditelskoe-udostoverenie-birthday-place"
-               placeholder="Место рождения" required="">
+               placeholder="Место рождения">
 
         <label for="voditelskoe-udostoverenie-data-vydachi-voditelskogo-udostovereniya">Дата выдачи водительского
             удостоверения</label>
         <input type="date" name="voditelskoe-udostoverenie-data-vydachi-voditelskogo-udostovereniya"
                id="voditelskoe-udostoverenie-data-vydachi-voditelskogo-udostovereniya"
-               placeholder="Дата выдачи водительского удостоверения" required="">
+               placeholder="Дата выдачи водительского удостоверения">
 
         <label for="voditelskoe-udostoverenie-seria">Серия</label>
         <input type="number" name="voditelskoe-udostoverenie-seria" id="voditelskoe-udostoverenie-seria"
-               placeholder="Серия" required="">
+               placeholder="Серия">
 
         <label for="voditelskoe-udostoverenie-number">Номер</label>
         <input type="number" name="voditelskoe-udostoverenie-number" id="voditelskoe-udostoverenie-number"
-               placeholder="Номер" required="">
+               placeholder="Номер">
 
         <label for="voditelskoe-udostoverenie-data-nachala-stazha-kategorii-V">Дата начала стажа категории В (на ВУ
             нового образца указано на обратной стороне)</label>
         <input type="date" name="voditelskoe-udostoverenie-data-nachala-stazha-kategorii-V"
                id="voditelskoe-udostoverenie-data-nachala-stazha-kategorii-V"
-               placeholder="Дата выдачи водительского удостоверения" required="">
+               placeholder="Дата выдачи водительского удостоверения">
 
         <label for="voditelskoe-udostoverenie-predydushchee-voditelskoe-udostoverenie-seriya">Предыдущее водительское
             удостоверение (серия)</label>
         <input type="number" name="voditelskoe-udostoverenie-predydushchee-voditelskoe-udostoverenie-seriya"
                id="voditelskoe-udostoverenie-predydushchee-voditelskoe-udostoverenie-seriya"
-               placeholder="Серия" required="">
+               placeholder="Серия">
 
         <label for="voditelskoe-udostoverenie-predydushchee-voditelskoe-udostoverenie-number">Предыдущее водительское
             удостоверение (номер)</label>
         <input type="number" name="voditelskoe-udostoverenie-predydushchee-voditelskoe-udostoverenie-number"
                id="voditelskoe-udostoverenie-predydushchee-voditelskoe-udostoverenie-number"
-               placeholder="Номер" required="">
+               placeholder="Номер">
 
         <h2>Свидетельство о регистрации транспортного средства</h2>
         <label for="svidetelstvo-o-registracii-transportnogo-sredstva-gos-nomer">Гос номер</label>
         <input type="text" name="svidetelstvo-o-registracii-transportnogo-sredstva-gos-nomer"
                id="svidetelstvo-o-registracii-transportnogo-sredstva-gos-nomer"
-               placeholder="Гос номер" required="">
+               placeholder="Гос номер">
 
 
         <label for="svidetelstvo-o-registracii-transportnogo-sredstva-vin-nomer">Vin номер</label>
         <input type="text" name="svidetelstvo-o-registracii-transportnogo-sredstva-vin-nomer"
                id="svidetelstvo-o-registracii-transportnogo-sredstva-vin-nomer"
-               placeholder="Vin номер" required="">
+               placeholder="Vin номер">
 
 
         <label for="svidetelstvo-o-registracii-transportnogo-sredstva-marka">Марка</label>
         <input type="text" name="svidetelstvo-o-registracii-transportnogo-sredstva-marka"
                id="svidetelstvo-o-registracii-transportnogo-sredstva-marka"
-               placeholder="Марка" required="">
+               placeholder="Марка">
 
         <label for="svidetelstvo-o-registracii-transportnogo-sredstva-model">Модель</label>
         <input type="text" name="svidetelstvo-o-registracii-transportnogo-sredstva-model"
                id="svidetelstvo-o-registracii-transportnogo-sredstva-model"
-               placeholder="Модель" required="">
+               placeholder="Модель">
 
 
         <label for="svidetelstvo-o-registracii-transportnogo-sredstva-type-tc">Тип ТС</label>
         <input type="text" name="svidetelstvo-o-registracii-transportnogo-sredstva-type-tc"
                id="svidetelstvo-o-registracii-transportnogo-sredstva-type-tc"
-               placeholder="Тип ТС" required="">
+               placeholder="Тип ТС">
 
         <label for="svidetelstvo-o-registracii-transportnogo-sredstva-god-vypuska">Год выпуска</label>
         <input type="date" name="svidetelstvo-o-registracii-transportnogo-sredstva-god-vypuska"
                id="svidetelstvo-o-registracii-transportnogo-sredstva-god-vypuska"
-               placeholder="Год выпуска" required="">
+               placeholder="Год выпуска">
 
 
         <label for="svidetelstvo-o-registracii-transportnogo-sredstva-color">Цвет</label>
         <input type="text" name="svidetelstvo-o-registracii-transportnogo-sredstva-color"
                id="svidetelstvo-o-registracii-transportnogo-sredstva-color"
-               placeholder="Цвет" required="">
+               placeholder="Цвет">
 
 
         <label for="svidetelstvo-o-registracii-transportnogo-sredstva-power-horse">Мощность л.с.</label>
         <input type="number" name="svidetelstvo-o-registracii-transportnogo-sredstva-power-horse"
                id="svidetelstvo-o-registracii-transportnogo-sredstva-power-horse"
-               placeholder="Мощность л.с." required="">
+               placeholder="Мощность л.с.">
 
 
         <label for="svidetelstvo-o-registracii-transportnogo-sredstva-power-kBT">Мощность кВТ</label>
         <input type="number" name="svidetelstvo-o-registracii-transportnogo-sredstva-power-kBT"
                id="svidetelstvo-o-registracii-transportnogo-sredstva-power-kBT"
-               placeholder="Мощность кВТ" required="">
+               placeholder="Мощность кВТ">
 
 
         <label for="svidetelstvo-o-registracii-transportnogo-sredstva-ctc-seria">Серия стс</label>
         <input type="number" name="svidetelstvo-o-registracii-transportnogo-sredstva-ctc-seria"
                id="svidetelstvo-o-registracii-transportnogo-sredstva-ctc-seria"
-               placeholder="Серия стс" required="">
+               placeholder="Серия стс">
 
         <label for="svidetelstvo-o-registracii-transportnogo-sredstva-ctc-nomer">Номер стс</label>
         <input type="number" name="svidetelstvo-o-registracii-transportnogo-sredstva-ctc-nomer"
                id="svidetelstvo-o-registracii-transportnogo-sredstva-ctc-nomer"
-               placeholder="Номер стс" required="">
+               placeholder="Номер стс">
 
         <label for="svidetelstvo-o-registracii-transportnogo-sredstva-god-vydachi-ctc">Год выдачи стс</label>
         <input type="date" name="svidetelstvo-o-registracii-transportnogo-sredstva-god-vydachi-ctc"
                id="svidetelstvo-o-registracii-transportnogo-sredstva-god-vydachi-ctc"
-               placeholder="Год выдачи стс" required="">
+               placeholder="Год выдачи стс">
 
         <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
     </fieldset>
